# CLASSpp_public

./: .gitignore  AUTHORS.txt  MANIFEST.in  Makefile  README.md  classy.pyx  explanatory.ini  generate_wrapper.py  pyproject.toml  setup.py
.github/workflows/: build.yml  build_wheels.yml  test_nightly.yml  test_on_pull_request.yml
CLASS.xcodeproj/: project.pbxproj
CLASS.xcodeproj/xcshareddata/xcschemes/: CLASS.xcscheme
hyrec/: helium.c  history.c  history.h  hydrogen.c
include/: arrays.h  common.h  growTable.h  parser.h  precision_macros.h  precisions.h  quadrature.h
main/: class.h
notebooks/: 125-general-ncdm-changes.ipynb  127-ncdmdr-background-no-inv-no-qs.ipynb  129-ncdmdr-perts-no-inv-no-qs.ipynb  141-l-max-col-dr.ipynb  174-sigma8_input-S8_input.ipynb  2205-13628.ipynb
ppCLASS.xcodeproj/: project.pbxproj
python/: classy.pyx  generate_wrapper.py  test_class.py
source/: background.h  background_module.cpp  background_module.h  base_module.h  cosmology.cpp  input_module.cpp  input_module.h  lensing_module.cpp  lensing_module.h  nonlinear_module.cpp  output_module.cpp  output_module.h  perturbations.h  perturbations_module.cpp  perturbations_module.h  primordial.h  primordial_module.cpp  primordial_module.h  spectra_module.cpp  thermodynamics_module.cpp  transfer_module.cpp  transfer_module.h
tools/: arrays.c  dark_radiation.cpp  dark_radiation.h  evolver_ndf15.cpp  exceptions.cpp  hyperspherical.c  non_cold_dark_matter.cpp  non_cold_dark_matter.h  parser.cpp  quadrature.c  thread_pool.h
