[build-system]
requires = ["setuptools", "wheel", "Cython", "numpy"]

[project]
name = "classy-community"
version = "23.2.0"
authors = [
  { name="Thomas Tram", email="thomas.tram@phys.au.dk"},
]
description = "Python interface to the C++ community-edition of the cosmological Boltzmann code CLASS"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: GNU General Public License v3 (GPLv3)",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/AarhusCosmology/CLASSpp_public"
"Bug Tracker" = "https://github.com/AarhusCosmology/CLASSpp_public/issues"
